# cocotbext-blk-mem-gen

./: README.md  setup.cfg
cocotbext/blk_mem_gen/: __init__.py  blk_mem_gen.py
tests/: Makefile  testbench.py  top_wrapper.v
