# package information
[metadata]
name = cocotbext-blk-mem-gen
version = attr: cocotbext.blk_mem_gen.version.__version__
description = Xilix Block Memory Generator Model with AXI
keywords = bram, BGM, xilinx, axi, cocotb
author = Lucas Brasilino
author_email = lucas.brasilino@gmail.com
license = MIT
url = https://github.com/lucasbrasilino/cocotbext-blk-mem-gen
project_urls =
    Bug Tracker = https://github.com/lucasbrasilino/cocotbext-blk-mem-gen/issues
    Source Code = https://github.com/lucasbrasilino/cocotbext-blk-mem-gen
download_url = https://github.com/lucasbrasilino/cocotbext-blk-mem-gen/tarball/master
long_description = file: README.md
long-description-content-type = text/markdown
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
packages = find_namespace:
python_requires = >=3.6
install_requires =
    cocotb
    cocotb-bus
    cocotbext-axi

[options.packages.find]
include = cocotbext.*

